--- a/Sakura.com/Onde assistir/index.html
+++ b/Sakura.com/Onde assistir/index.html
@@ -4,21 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="/imgs/logo_sakuracom.png" type="image/png">
-    <title>SAKURA.COM - Onde assistir</title>
+    <title>SAKURA.COM</title>
     <link rel="stylesheet" href="/css/estilo.css">
 </head>
 <body>
     <header>
         <div class="logo-imagem">
-            <img src="/imgs/logo_sakuracom.png" alt="logo_sakuracom" class="logo-imagem">
-            <h1><strong>SAKURA.COM<strong></h1>
-            <nav>
-                <ul>
-                    <li><a href="/Sakura.com/Produtos/index.html">PRODUTOS</a></li>
-                    <li><a href="/Sakura.com/Wiki/index.html">WIKI</a></li>
-                    <li><a href="/index.html">PÁGINA INICIAL</a></li>
-                </ul>
-            </nav>
+            <img src="/imgs/logo_sakuracom.png" alt="logo_sakuracom">
+            <h1><strong>SAKURA.COM</strong></h1>
+        </div>
+        <nav>
+            <ul class="menu-navegacao">
+                <li><a href="/Sakura.com/Produtos/index.html" class="botao-menu">PRODUTOS</a></li>
+                <li><a href="/Sakura.com/Wiki/index.html" class="botao-menu">WIKI</a></li>
+                <li><a href="/index.html" class="botao-menu">HOME</a></li>
+            </ul>
+        </nav>
     </header>
     <section class="onde-assistir">
         <h2>ONDE ASSISTIR?</h2>
