--- a/Sakura.com/Produtos/index.html
+++ b/Sakura.com/Produtos/index.html
@@ -4,35 +4,35 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="/imgs/logo_sakuracom.png" type="image/png">
-    <title>SAKURA.COM - Produtos</title>
+    <title>SAKURA.COM</title>
     <link rel="stylesheet" href="/css/estilo.css">
 </head>
 <body>
     <header>
-        <div class="logo">
-            <img src="/imgs/logo_sakuracom.png" alt="logo_sakuracom" class="logo">
-            <h1>SAKURA.COM</h1>
+        <div class="logo-imagem">
+            <img src="/imgs/logo_sakuracom.png" alt="logo_sakuracom">
+            <h1><strong>SAKURA.COM</strong></h1>
         </div>
         <nav>
-            <ul>
-                <li><a href="/index.html">PÁGINA INICIAL</a></li>
-                <li><a href="/Sakura.com/Wiki/index.html">WIKI</a></li>
-                <li><a href="/Sakura.com/Onde assistir/index.html">ONDE ASSISTIR</a></li>
+            <ul class="menu-navegacao">
+                <li><a href="/index.html" class="botao-menu">HOME</a></li>
+                <li><a href="/Sakura.com/Wiki/index.html" class="botao-menu">WIKI</a></li>
+                <li><a href="/Sakura.com/Onde assistir/index.html" class="botao-menu">ONDE ASSISTIR</a></li>
             </ul>
         </nav>
     </header>
     <main>
         <section class="introducao">
-            <p>Bem-vindo à SAKURA.COM, onde você encontra produtos originais inspirados na mágica série Cardcaptor Sakura. Todos os nossos produtos são fabricados com qualidade e atenção aos detalhes, para oferecer a melhor experiência aos fãs. Explore nossa coleção exclusiva e descubra o mundo de Sakura com itens que vão desde coleções completas de mangás até acessórios icônicos.</p> 
+            <p>Bem-vindo à SAKURA.COM, onde você encontra produtos originais inspirados na mágica série Cardcaptor Sakura.<br> Todos os nossos produtos são fabricados com qualidade e atenção aos detalhes, para oferecer a melhor experiência aos fãs.<br> Explore nossa coleção exclusiva e descubra o mundo de Sakura!</p> 
         </section>
 
         <section class="catalogo">
             <h2>NOSSOS PRINCIPAIS PRODUTOS</h2>
             <div class="produto">
-                <img src="/imgs/produto-1.png" alt="Coleção completa de mangás original Sakura CardCaptors">
-                <h3>Coleção completa de mangás original Sakura CardCaptors</h3>
-                <p>Uma coleção completa e original dos mangás de Sakura CardCaptors, perfeita para colecionadores e fãs que desejam reviver cada momento da saga mágica.</p>
-                <p><strong>Preço:</strong> R$ 450,00</p>
+                <img src="/imgs/produto-1.png" alt="Coleção completa de mangás original">
+                <h3>Coleção completa de mangás original</h3>
+                <p>Uma coleção completa e original dos mangás de Sakura CardCaptors, perfeita para colecionadores e fãs.</p>
+                <p><strong>R$ 450,00</strong></p>
             </div>
             <div class="produto">
                 <img src="/imgs/produto-2.jpg" alt="Paleta temática">
@@ -55,13 +55,13 @@
             <div class="produto">
                 <img src="/imgs/produto-5.png" alt="Colar Báculo Sakura Aço Inox">
                 <h3>Colar Báculo Sakura Aço Inox</h3>
-                <p>Um elegante colar de aço inox com pingente do Báculo Sakura, ideal para mostrar seu amor pela série de forma sutil e estilosa.</p>
+                <p>Um elegante colar de aço inox com pingente do Báculo Sakura, ideal para mostrar seu amor pela série de forma estilosa.</p>
                 <strong><p>R$ 180,00</p></strong>
             </div>
             <div class="produto">
                 <img src="/imgs/produto-6.jpg" alt="Coleção de cartas mágicas do Mago Clow">
                 <h3>Coleção de cartas mágicas do Mago Clow</h3>
-                <p>Réplica das cartas mágicas do Mago Clow, um item indispensável para qualquer fã de Cardcaptor Sakura. Ideal para colecionar ou usar em cosplay.</p>
+                <p>Réplica das cartas mágicas do Mago Clow, um item indispensável para qualquer fã de Sakura. Ideal para colecionar ou usar em cosplay.</p>
                 <strong><p>R$ 280,00</p></strong>
             </div>
         </section>
