--- a/index.html
+++ b/index.html
@@ -9,42 +9,46 @@
 </head>
 <body>
     <header>
-     <div class="logo-imagem">
-        <img src="/imgs/logo_sakuracom.png" alt="logo_sakuracom" class="logo-imagem">
-        <h1><strong>SAKURA.COM<strong></h1>
+        <div class="logo-container">
+            <img src="/imgs/logo_sakuracom.png" alt="logo_sakuracom" class="logo-imagem">
+            <h1><strong>SAKURA.COM</strong></h1>
+        </div>
         <nav>
-            <ul>
-                <li><a href="/Sakura.com/Produtos/index.html">PRODUTOS</a></li>
-                <li><a href="/Sakura.com/Wiki/index.html">WIKI</a></li>
-                <li><a href="/Sakura.com/Onde assistir/index.html">ONDE ASSISTIR</a></li>
+            <ul class="menu-navegacao">
+                <li><a href="/Sakura.com/Produtos/index.html" class="botao-menu">PRODUTOS</a></li>
+                <li><a href="/Sakura.com/Wiki/index.html" class="botao-menu">WIKI</a></li>
+                <li><a href="/Sakura.com/Onde assistir/index.html" class="botao-menu">ONDE ASSISTIR</a></li>
             </ul>
         </nav>
     </header>
-    <section class="informacoes">
-        <img src="/imgs/sakura_info.jpg" alt="kero" width="200" class="info-imagem"><h2>O QUE FAZEMOS</h2>
-        <p>Sakura Card Captors é uma série de anime e mangá que segue a história de Sakura Kinomoto, <br> uma jovem que deve capturar cartas mágicas e restaurar a ordem no mundo.<br> A série é conhecida por sua magia, aventuras e personagens encantadores. Nossa loja fornece qualquer informação, produto e meios <br>para assistir essa obra tão aclamada pelo público mundial.</p>
-    </section>
-    <section class="localizacao">
-        <h2>VISITE A NOSSA LOJA!</h2>
-        <address>
-            Sakura.com<br>
-            Rua da Flor, 666 - Bairro Tsukshima<br>
-            Xique-Xique, BA, 01234-567<br>
-            Brasil
-        </address>
-        <img src="/imgs/loja_frente.png" width="300" alt="Frente da loja" class="loja"> <img src="/imgs/loja_interior.png"width="300" alt="Interior da loja" class="loja"> 
-    </section>
-</main>
+    <main>
+        <section class="informacoes">
+            <img src="/imgs/sakura_info.jpg" alt="kero" width="200" class="info-imagem">
+            <h2>O QUE FAZEMOS</h2>
+            <p>Sakura Card Captors é uma série de anime e mangá que segue a história de Sakura Kinomoto, <br> uma jovem que deve capturar cartas mágicas e restaurar a ordem no mundo.<br> A série é conhecida por sua magia, aventuras e personagens encantadores. Nossa loja fornece qualquer informação, produto e meios <br>para assistir essa obra tão aclamada pelo público mundial.</p>
+        </section>
+        <section class="localizacao">
+            <h2>VISITE A NOSSA LOJA!</h2>
+            <address>
+                Sakura.com<br>
+                Rua da Flor, 666 - Bairro Tsukshima<br>
+                Xique-Xique, BA, 01234-567<br>
+                Brasil
+            </address>
+            <img src="/imgs/loja_frente.png" width="300" alt="Frente da loja" class="loja">
+            <img src="/imgs/loja_interior.png" width="300" alt="Interior da loja" class="loja"> 
+        </section>
+    </main>
 
-<footer>
-    <p>&copy; 2024 SAKURA.COM. Todos os direitos reservados.</p>
-    <nav>
-        <ul>
-            <li><a href="https://www.instagram.com/sakura_cardcaptors_br/">Contato</a></li>
-            <li><a href="https://pt.shein.com/Terms-and-Conditions-a-399.html">Termos de Serviço</a></li>
-            <li><a href="https://help.shopee.com.br/portal/4/article/77068">Política de Privacidade</a></li>
-        </ul>
-    </nav>
-</footer>
+    <footer>
+        <p>&copy; 2024 SAKURA.COM. Todos os direitos reservados.</p>
+        <nav>
+            <ul>
+                <li><a href="https://www.instagram.com/sakura_cardcaptors_br/">Contato</a></li>
+                <li><a href="https://pt.shein.com/Terms-and-Conditions-a-399.html">Termos de Serviço</a></li>
+                <li><a href="https://help.shopee.com.br/portal/4/article/77068">Política de Privacidade</a></li>
+            </ul>
+        </nav>
+    </footer>
 </body>
 </html>
