--- a/index.html
+++ b/index.html
@@ -3,15 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="/imgs/logo_sakuracom.png" type="image/png">
+    <link rel="icon" href="/imgs/logo_sakuracom.png" type="image/png"></a>
     <title>SAKURA.COM</title>
     <link rel="stylesheet" href="/css/estilo.css">
 </head>
 <body>
     <header>
-        <div class="logo-container">
+        <div class="header-content">
+            <a href="/index.html">
             <img src="/imgs/logo_sakuracom.png" alt="logo_sakuracom" class="logo-imagem">
-            <h1><strong>SAKURA.COM</strong></h1>
+            </a>
+            <h1>SAKURA.COM</h1>
         </div>
         <nav>
             <ul class="menu-navegacao">
@@ -23,30 +25,29 @@
     </header>
     <main>
         <section class="informacoes">
-            <img src="/imgs/sakura_info.jpg" alt="kero" width="200" class="info-imagem">
             <h2>O QUE FAZEMOS</h2>
-            <p>Sakura Card Captors é uma série de anime e mangá que segue a história de Sakura Kinomoto, <br> uma jovem que deve capturar cartas mágicas e restaurar a ordem no mundo.<br> A série é conhecida por sua magia, aventuras e personagens encantadores. Nossa loja fornece qualquer informação, produto e meios <br>para assistir essa obra tão aclamada pelo público mundial.</p>
+            <p>SAKURA.COM é o destino ideal para todos os fãs da série Cardcaptor Sakura. Oferecemos uma gama completa de produtos<br> inspirados neste amado anime, incluindo figuras, acessórios e colecionáveis exclusivos. Além disso, nosso site oferece informações<br> detalhadas sobre a série, com uma seção dedicada a onde você pode assistir aos episódios e uma wiki completa <br>com detalhes sobre os personagens e enredos.</p>
+            <img src="/imgs/sakura_info.jpg" alt="kero" width="200" class="info-imagem">
         </section>
         <section class="localizacao">
             <h2>VISITE A NOSSA LOJA!</h2>
             <address>
-                Sakura.com<br>
+                SAKURA.COM<br>
                 Rua da Flor, 666 - Bairro Tsukshima<br>
                 Xique-Xique, BA, 01234-567<br>
-                Brasil
+                Brasil<br>
             </address>
-            <img src="/imgs/loja_frente.png" width="300" alt="Frente da loja" class="loja">
-            <img src="/imgs/loja_interior.png" width="300" alt="Interior da loja" class="loja"> 
+            <img src="/imgs/loja_frente.png" width="350" alt="Frente da loja" class="loja">
+            <img src="/imgs/loja_interior.png" width="350" alt="Interior da loja" class="loja"> 
         </section>
     </main>
-
     <footer>
         <p>&copy; 2024 SAKURA.COM. Todos os direitos reservados.</p>
         <nav>
             <ul>
-                <li><a href="https://www.instagram.com/sakura_cardcaptors_br/">Contato</a></li>
-                <li><a href="https://pt.shein.com/Terms-and-Conditions-a-399.html">Termos de Serviço</a></li>
-                <li><a href="https://help.shopee.com.br/portal/4/article/77068">Política de Privacidade</a></li>
+                <li><a href="https://www.instagram.com/sakura_cardcaptors_br/">CONTATO</a></li>
+                <li><a href="https://pt.shein.com/Terms-and-Conditions-a-399.html">TERMOS DE SERVIÇO</a></li>
+                <li><a href="https://help.shopee.com.br/portal/4/article/77068">POLÍTICA E PRIVACIDADE</a></li>
             </ul>
         </nav>
     </footer>
