--- a/Sakura.com/Produtos/index.html
+++ b/Sakura.com/Produtos/index.html
@@ -9,9 +9,11 @@
 </head>
 <body>
     <header>
-        <div class="logo-imagem">
-            <img src="/imgs/logo_sakuracom.png" alt="logo_sakuracom">
-            <h1><strong>SAKURA.COM</strong></h1>
+        <div class="header-content">
+            <a href="/index.html">
+            <img src="/imgs/logo_sakuracom.png" alt="logo_sakuracom" class="logo-imagem">
+            </a>
+            <h1>SAKURA.COM</h1>
         </div>
         <nav>
             <ul class="menu-navegacao">
