--- a/Sakura.com/Wiki/index.html
+++ b/Sakura.com/Wiki/index.html
@@ -9,14 +9,16 @@
 </head>
 <body>
     <header>
-        <div class="logo-imagem">
-            <img src="/imgs/logo_sakuracom.png" alt="logo_sakuracom">
-            <h1><strong>SAKURA.COM</strong></h1>
+        <div class="header-content">
+            <a href="/index.html">
+            <img src="/imgs/logo_sakuracom.png" alt="logo_sakuracom" class="logo-imagem">
+            </a>
+            <h1>SAKURA.COM</h1>
         </div>
         <nav>
             <ul class="menu-navegacao">
-                <li><a href="/Sakura.com/Produtos/index.html" class="botao-menu">PRODUTOS</a></li>
                 <li><a href="/index.html" class="botao-menu">HOME</a></li>
+                <li><a href="/Sakura.com/Produtos/index.html" class="botao-menu">PRODUTOS</a></li>
                 <li><a href="/Sakura.com/Onde assistir/index.html" class="botao-menu">ONDE ASSISTIR</a></li>
             </ul>
         </nav>
