--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="/imgs/logo_sakuracom.png" type="image/png"></a>
+    <link rel="icon" href="/imgs/logo_sakuracom.png" type="image/png">
     <title>SAKURA.COM</title>
     <link rel="stylesheet" href="/css/estilo.css">
 </head>
@@ -11,7 +11,7 @@
     <header>
         <div class="header-content">
             <a href="/index.html">
-            <img src="/imgs/logo_sakuracom.png" alt="logo_sakuracom" class="logo-imagem">
+                <img src="/imgs/logo_sakuracom.png" alt="logo_sakuracom" class="logo-imagem">
             </a>
             <h1>SAKURA.COM</h1>
         </div>
@@ -26,19 +26,35 @@
     <main>
         <section class="informacoes">
             <h2>O QUE FAZEMOS</h2>
-            <p>SAKURA.COM é o destino ideal para todos os fãs da série Cardcaptor Sakura. Oferecemos uma gama completa de produtos<br> inspirados neste amado anime, incluindo figuras, acessórios e colecionáveis exclusivos. Além disso, nosso site oferece informações<br> detalhadas sobre a série, com uma seção dedicada a onde você pode assistir aos episódios e uma wiki completa <br>com detalhes sobre os personagens e enredos.</p>
+            <p><strong>SAKURA.COM</strong> é o destino ideal para todos os fãs da série Cardcaptor Sakura. Oferecemos uma gama completa de produtos<br> inspirados neste amado anime, incluindo figuras, acessórios e colecionáveis exclusivos. Além disso, nosso site oferece informações<br> detalhadas sobre a série, com uma seção dedicada a onde você pode assistir aos episódios e uma wiki completa <br>com detalhes sobre os personagens e enredos.</p>
             <img src="/imgs/sakura_info.jpg" alt="kero" width="200" class="info-imagem">
         </section>
         <section class="localizacao">
             <h2>VISITE A NOSSA LOJA!</h2>
             <address>
-                SAKURA.COM<br>
+                <strong>SAKURA.COM</strong><br>
                 Rua da Flor, 666 - Bairro Tsukshima<br>
                 Xique-Xique, BA, 01234-567<br>
                 Brasil<br>
             </address>
             <img src="/imgs/loja_frente.png" width="350" alt="Frente da loja" class="loja">
             <img src="/imgs/loja_interior.png" width="350" alt="Interior da loja" class="loja"> 
+        </section>
+        
+        <section class="depoimentos">
+            <h2>DEPOIMENTOS DE CLIENTES</h2>
+            <div class="depoimento">
+                <p>"A loja SAKURA.COM é simplesmente incrível! Encontrei produtos que nunca imaginei,<br> e a qualidade é impecável. Estou apaixonada por cada item que comprei!"</p>
+                <cite>— Maria Souza</cite>
+            </div>
+            <div class="depoimento">
+                <p>"A melhor loja online para fãs de Cardcaptor Sakura! O atendimento é excelente,<br> e os produtos chegaram super rápido. Recomendo muito!"</p>
+                <cite>— João Oliveira</cite>
+            </div>
+            <div class="depoimento">
+                <p>"Fiquei encantada com a variedade de produtos na SAKURA.COM. É tudo tão bem feito e detalhado. <br>Minha coleção de Sakura nunca esteve tão completa!"</p>
+                <cite>— Luana Ferreira</cite>
+            </div>
         </section>
     </main>
     <footer>
