--- a/Sakura.com/Onde assistir/index.html
+++ b/Sakura.com/Onde assistir/index.html
@@ -23,6 +23,7 @@
             </ul>
         </nav>
     </header>
+    <main>
     <section class="onde-assistir">
         <h2>ONDE ASSISTIR?</h2>
         <div class="streaming">
@@ -40,6 +41,7 @@
                 <img src="/imgs/primevideo.png"width = "400" alt="Prime Video" class="streaming-logo">
                 <p>WATCH ON PRIME VIDEO</p>
             </a>
+    </main>
     <footer>
         <p>&copy; 2024 SAKURA.COM. Todos os direitos reservados.</p>
     </footer>
