--- a/Sakura.com/Produtos/index.html
+++ b/Sakura.com/Produtos/index.html
@@ -25,7 +25,7 @@
     </header>
     <main>
         <section class="introducao">
-            <p>Bem-vindo à SAKURA.COM, onde você encontra produtos originais inspirados na mágica série Cardcaptor Sakura.<br> Todos os nossos produtos são fabricados com qualidade e atenção aos detalhes, para oferecer a melhor experiência aos fãs.<br> Explore nossa coleção exclusiva e descubra o mundo de Sakura!</p> 
+            <p>Bem-vindo à <strong>SAKURA.COM</strong>, onde você encontra produtos originais inspirados na mágica série Cardcaptor Sakura.<br> Todos os nossos produtos são fabricados com qualidade e atenção aos detalhes, para oferecer a melhor experiência aos fãs.<br> Explore nossa coleção exclusiva e descubra o mundo de Sakura!</p> 
         </section>
 
         <section class="catalogo">
