--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <section class="informacoes">
             <h2>O QUE FAZEMOS</h2>
             <p><strong>SAKURA.COM</strong> é o destino ideal para todos os fãs da série Cardcaptor Sakura. Oferecemos uma gama completa de produtos<br> inspirados neste amado anime, incluindo figuras, acessórios e colecionáveis exclusivos. Além disso, nosso site oferece informações<br> detalhadas sobre a série, com uma seção dedicada a onde você pode assistir aos episódios e uma wiki completa <br>com detalhes sobre os personagens e enredos.</p>
-            <img src="/imgs/sakura_info.jpg" alt="kero" width="200" class="info-imagem">
+            <img src="/imgs/sakura_info.jpg" alt="kero" width="150" class="info-imagem">
         </section>
         <section class="localizacao">
             <h2>VISITE A NOSSA LOJA!</h2>
@@ -37,7 +37,7 @@
                 Xique-Xique, BA, 01234-567<br>
                 Brasil<br>
             </address>
-            <img src="/imgs/loja_frente.png" width="350" alt="Frente da loja" class="loja">
+            <img src="/imgs/loja_frente.png" width="350"  alt="Frente da loja" class="loja">
             <img src="/imgs/loja_interior.png" width="350" alt="Interior da loja" class="loja"> 
         </section>
         
@@ -45,15 +45,15 @@
             <h2>DEPOIMENTOS DE CLIENTES</h2>
             <div class="depoimento">
                 <p>"A loja SAKURA.COM é simplesmente incrível! Encontrei produtos que nunca imaginei,<br> e a qualidade é impecável. Estou apaixonada por cada item que comprei!"</p>
-                <cite>— Maria Souza</cite>
+                <cite>— João Gabriel</cite>
             </div>
             <div class="depoimento">
                 <p>"A melhor loja online para fãs de Cardcaptor Sakura! O atendimento é excelente,<br> e os produtos chegaram super rápido. Recomendo muito!"</p>
-                <cite>— João Oliveira</cite>
+                <cite>— Sofia Manuella</cite>
             </div>
             <div class="depoimento">
                 <p>"Fiquei encantada com a variedade de produtos na SAKURA.COM. É tudo tão bem feito e detalhado. <br>Minha coleção de Sakura nunca esteve tão completa!"</p>
-                <cite>— Luana Ferreira</cite>
+                <cite>— Thomás Matos</cite>
             </div>
         </section>
     </main>
