--- a/Sakura.com/Produtos/index.html
+++ b/Sakura.com/Produtos/index.html
@@ -69,7 +69,14 @@
         </section>
     </main>
     <footer>
-        <p>&copy; 2024 SAKURA.COM. Todos os direitos reservados.</p>
+        <p>SAKURA.COM. Todos os direitos reservados.</p>
+        <nav>
+            <ul>
+                <li><a href="https://www.instagram.com/sakura_cardcaptors_br/">CONTATO</a></li>
+                <li><a href="https://pt.shein.com/Terms-and-Conditions-a-399.html">TERMOS DE SERVIÇO</a></li>
+                <li><a href="https://help.shopee.com.br/portal/4/article/77068">POLÍTICA E PRIVACIDADE</a></li>
+            </ul>
+        </nav>
     </footer>
 </body>
 </html>
