--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         </section>
     </main>
     <footer>
-        <p>&copy; 2024 SAKURA.COM. Todos os direitos reservados.</p>
+        <p>SAKURA.COM. Todos os direitos reservados.</p>
         <nav>
             <ul>
                 <li><a href="https://www.instagram.com/sakura_cardcaptors_br/">CONTATO</a></li>
