--- a/Sakura.com/Wiki/index.html
+++ b/Sakura.com/Wiki/index.html
@@ -82,7 +82,7 @@
         </section>
     </main>
     <footer>
-        <p>SAKURA.COM. Todos os direitos reservados.</p>
+        <p>© Todos os direitos reservados - 2024</p>
         <nav>
             <ul>
                 <li><a href="https://www.instagram.com/sakura_cardcaptors_br/">CONTATO</a></li>
