--- a/Sakura.com/Onde assistir/index.html
+++ b/Sakura.com/Onde assistir/index.html
@@ -43,7 +43,7 @@
             </a>
     </main>
     <footer>
-        <p>SAKURA.COM. Todos os direitos reservados.</p>
+        <p>© Todos os direitos reservados - 2024</p>
         <nav>
             <ul>
                 <li><a href="https://www.instagram.com/sakura_cardcaptors_br/">CONTATO</a></li>
